# gpupatch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
conductor/: companion_gui_plan.md  update_cargo_metadata.md
core/: Cargo.toml
core/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
node-module/: Cargo.toml  package.json
node-module/src/: lib.rs
scripts/: verify_parity.py
src/: main.rs
